--- a/style.css
+++ b/style.css
@@ -525,9 +525,9 @@ body {
   display: none;
   z-index: 1000;
   opacity: 0;
-  transition: opacity 0.4s ease-in-out;
   overflow: hidden;
   cursor: pointer; 
+  transition: opacity 0.4s ease;
 }
 
 .image-viewer-overlay.active {
